# csvinfo

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: cli.rs
tests/data/: data_types.csv  empty.csv  float.csv  max.csv  mixed.csv  numeric.csv  quoted.csv  simple.csv  unicode.csv
