[package]
name = "csvinfo"
version = "0.4.2"
authors = ["Thomas Sullivan <thomas.l.sullivan@vumc.org>"]
edition = "2018"

[lib]
name = "csv_lib"
path = "src/lib.rs"

[[bin]]
name = "csvinfo"
path = "src/main.rs"

[dependencies]
csv = "1"
clap = "2.33.0"
tabular = "0.1.2"

[dev-dependencies]
assert_cmd = "0.11"
predicates = "1"
